--- a/src/styles/foundation.scss
+++ b/src/styles/foundation.scss
@@ -1,2 +1,4 @@
 @import './foundation/colors.scss';
 @import './foundation/typography.scss';
+@import './foundation/utilities.scss';
+@import './foundation/breakpoints.scss';
