--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -16,21 +16,60 @@
 .post__title {
   flex: 1 1 50rem;
   margin: 0;
+  font-size: 4rem;
 
-  @media (min-width: 700px) {
-    text-align: left;
+  @media (min-width: $large-screen-breakpoint) {
+    font-size: 6rem;
   }
 }
 
 .post__date {
   flex: 0 1 15rem;
   font-size: 2.8rem;
-  margin-left: 3.2rem;
-  text-align: right;
+  margin-left: 0;
+  text-align: left;
+
+  @media (min-width: $large-screen-breakpoint) {
+    text-align: right;
+    margin-left: 3.2rem;
+  }
 }
 
 .post__content {
   font-size: 2.2rem;
   line-height: 3.6rem;
   min-width: 0;
+
+  @media (min-width: $large-screen-breakpoint) {
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+  }
+}
+
+.post--condensed {
+  .post__header {
+    margin-bottom: 0;
+
+    @media (min-width: $large-screen-breakpoint) {
+      margin-bottom: 2.4rem;
+    }
+  }
+
+  .post__title {
+    font-size: 4rem;
+
+    @media (min-width: $large-screen-breakpoint) {
+      font-size: 4.6rem;
+    }
+  }
+
+  .post__date {
+    font-size: 1.8rem;
+    flex: 1 1 100%;
+
+    @media (min-width: $large-screen-breakpoint) {
+      flex: 1 1 10rem;
+      font-size: 2.2rem;
+    }
+  }
 }
