--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -10,7 +10,11 @@
   flex: 1 1 100%;
   flex-wrap: wrap;
   align-items: center;
-  margin-bottom: 2.4rem;
+  margin-bottom: 0;
+
+  @media (min-width: $large-screen-breakpoint) {
+    margin-bottom: 2.4rem;
+  }
 }
 
 .post__title {
