--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,23 +31,43 @@ h6 {
 }
 
 h1 {
-  font-size: 6rem;
-  line-height: 7rem;
+  font-size: 4.6rem;
+  line-height: 5.8rem;
+
+  @media (min-width: $large-screen-breakpoint) {
+    font-size: 6rem;
+    line-height: 7rem;
+  }
 }
 
 h2 {
-  font-size: 4rem;
-  line-height: 5rem;
+  font-size: 3rem;
+  line-height: 3.8rem;
+
+  @media (min-width: $large-screen-breakpoint) {
+    font-size: 4rem;
+    line-height: 5rem;
+  }
 }
 
 h3 {
-  font-size: 3rem;
-  line-height: 3.8rem;
+  font-size: 2.6rem;
+  line-height: 3.2rem;
+
+  @media (min-width: $large-screen-breakpoint) {
+    font-size: 3rem;
+    line-height: 3.8rem;
+  }
 }
 
 h4 {
-  font-size: 2.6rem;
-  line-height: 3.2rem;
+  font-size: 2.2rem;
+  line-height: 3rem;
+
+  @media (min-width: $large-screen-breakpoint) {
+    font-size: 2.6rem;
+    line-height: 3.2rem;
+  }
 }
 
 h5 {
@@ -79,14 +99,6 @@ pre {
     font-size: 1em;
     font-weight: normal;
   }
-}
-
-.transition-group {
-  position: relative;
-}
-
-.transition-container {
-  position: absolute;
 }
 
 .page-enter {
